[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteVert.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteJaune.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteRouge.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteBleu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Domino/DominoPalette/DominoPaletteRose.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=6]

[node name="Fond" type="Node2D"]
script = ExtResource( 6 )

[node name="PanelCouleurFond" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 1023.0
margin_bottom = 601.0
mouse_filter = 2
color = Color( 0.698039, 0.854902, 1, 1 )

[node name="PanelFond" type="ColorRect" parent="."]
margin_left = 97.0
margin_top = 115.0
margin_right = 97.0
margin_bottom = 115.0
color = Color( 0, 0.345098, 0.996078, 1 )

[node name="PanelObjectif" type="ColorRect" parent="PanelFond"]
unique_name_in_owner = true
margin_left = 65.0
margin_top = 185.0
margin_right = 686.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 172, 41 )
mouse_filter = 1

[node name="ObjectifPoint" type="Position2D" parent="PanelFond/PanelObjectif"]
unique_name_in_owner = true
position = Vector2( 35, 55 )

[node name="PanelRegles" type="ColorRect" parent="PanelFond"]
margin_left = 701.0
margin_top = -81.0
margin_right = 908.0
margin_bottom = 454.0
rect_pivot_offset = Vector2( 68, 439 )

[node name="PanelPalette" type="ColorRect" parent="PanelFond"]
margin_left = -79.0
margin_top = -80.0
margin_right = 47.0
margin_bottom = 455.0
mouse_filter = 2

[node name="DominoPaletteBleu" parent="PanelFond/PanelPalette" instance=ExtResource( 4 )]
position = Vector2( 62, 69 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteVert" parent="PanelFond/PanelPalette" instance=ExtResource( 1 )]
position = Vector2( 62, 269 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteRouge" parent="PanelFond/PanelPalette" instance=ExtResource( 3 )]
position = Vector2( 62, 169 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteRose" parent="PanelFond/PanelPalette" instance=ExtResource( 5 )]
position = Vector2( 62, 469 )
scale = Vector2( 1, 1 )

[node name="DominoPaletteJaune" parent="PanelFond/PanelPalette" instance=ExtResource( 2 )]
position = Vector2( 62, 369 )
scale = Vector2( 1, 1 )

[node name="PanelBase" type="ColorRect" parent="PanelFond"]
unique_name_in_owner = true
margin_left = 62.0
margin_top = 33.0
margin_right = 686.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 172, 41 )
mouse_filter = 1

[node name="BasePoint" type="Position2D" parent="PanelFond/PanelBase"]
unique_name_in_owner = true
position = Vector2( 35, 55 )

[connection signal="gui_input" from="PanelFond/PanelObjectif" to="." method="_on_PanelObjectif_gui_input"]
[connection signal="click_domino_bleu" from="PanelFond/PanelPalette/DominoPaletteBleu" to="." method="_on_DominoPaletteBleu_click_domino_bleu"]
[connection signal="supp_domino_bleu" from="PanelFond/PanelPalette/DominoPaletteBleu" to="." method="_on_DominoPaletteBleu_supp_domino_bleu"]
[connection signal="click_domino_vert" from="PanelFond/PanelPalette/DominoPaletteVert" to="." method="_on_DominoPaletteVert_click_domino_vert"]
[connection signal="click_domino_rouge" from="PanelFond/PanelPalette/DominoPaletteRouge" to="." method="_on_DominoPaletteRouge_click_domino_rouge"]
[connection signal="click_domino_rose" from="PanelFond/PanelPalette/DominoPaletteRose" to="." method="_on_DominoPaletteRose_click_domino_rose"]
[connection signal="click_domino_jaune" from="PanelFond/PanelPalette/DominoPaletteJaune" to="." method="_on_DominoPaletteJaune_click_domino_jaune"]
[connection signal="gui_input" from="PanelFond/PanelBase" to="." method="_on_PanelBase_gui_input"]
